# EO-IR-Motor-control

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pantilt_openrb.ino
docs/: README.md
gui/: README.md  gui.py
install/gui_interface/lib/gui_interface/: gui_interface_node
install/gui_interface/share/ament_index/resource_index/package_run_dependencies/: gui_interface
install/gui_interface/share/ament_index/resource_index/parent_prefix_path/: gui_interface
install/gui_interface/share/gui_interface/: gui_interface.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  params.yaml
install/gui_interface/share/gui_interface/cmake/: gui_interfaceConfig-version.cmake  gui_interfaceConfig.cmake
install/gui_interface/share/gui_interface/environment/: ament_prefix_path.dsv  path.dsv
install/gui_interface/share/gui_interface/gui_interface/: Protocol.hpp
install/sentinel_interfaces/include/sentinel_interfaces/sentinel_interfaces/msg/: button_input.h  button_input.hpp  object_center.h  object_center.hpp  pan_tilt_angle.h  pan_tilt_angle.hpp  single_motor_status.h  single_motor_status.hpp
install/sentinel_interfaces/share/ament_index/resource_index/parent_prefix_path/: sentinel_interfaces
install/sentinel_interfaces/share/ament_index/resource_index/rosidl_interfaces/: sentinel_interfaces
install/sentinel_interfaces/share/sentinel_interfaces/: local_setup.sh  package.sh
install/sentinel_interfaces/share/sentinel_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_sentinel_interfaces__rosidl_generator_cExport.cmake  export_sentinel_interfaces__rosidl_generator_cppExport.cmake  export_sentinel_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_sentinel_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_sentinel_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  sentinel_interfaces__rosidl_typesupport_cExport.cmake  sentinel_interfaces__rosidl_typesupport_cppExport.cmake  sentinel_interfaces__rosidl_typesupport_introspection_cExport.cmake  sentinel_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/sentinel_interfaces/share/sentinel_interfaces/msg/: ButtonInput.idl  ButtonInput.json  ButtonInput.msg  Detection.idl  Detection.json  Detection.msg  Detection2D.idl  Detection2D.msg  Detection2DArray.idl  FrameInfo.idl  FrameInfo.json  FrameInfo.msg  MotorAngle.msg  MotorStatus.idl  MotorStatus.json  ObjectCenter.idl  ObjectCenter.json  PanTiltAngle.idl  PanTiltAngle.json  PanTiltAngle.msg  SingleMotorStatus.idl  SingleMotorStatus.json  VideoRxStatus.idl  VideoRxStatus.msg  YoloStatus.idl  YoloStatus.msg
install/sentinel_motor/lib/sentinel_motor/: pan_tilt_control_node  tracking_control_node
install/sentinel_motor/share/ament_index/resource_index/package_run_dependencies/: sentinel_motor
install/sentinel_motor/share/ament_index/resource_index/parent_prefix_path/: sentinel_motor
install/sentinel_motor/share/sentinel_motor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  pan_tilt_control.launch.py  params.yaml
install/sentinel_motor/share/sentinel_motor/cmake/: sentinel_motorConfig-version.cmake  sentinel_motorConfig.cmake
install/sentinel_motor/share/sentinel_motor/environment/: ament_prefix_path.dsv  path.dsv
install/sentinel_motor/share/sentinel_motor/sentinel_motor/: PacketDef.hpp  UdpTransport.hpp
openrb/: README.md  openrb_firmware.ino
src/gui_interface/: CMakeLists.txt  README.md  package.xml
src/gui_interface/config/: params.yaml
src/gui_interface/include/gui_interface/: Protocol.hpp  Protocol_backup.hpp
src/gui_interface/launch/: gui_interface.launch.py
src/gui_interface/src/: gui_interface_node.cpp  gui_interface_node_backup.cpp
src/sentinel_interfaces/: CMakeLists.txt
src/sentinel_interfaces/msg/: Detection.msg  Detection2DArray.msg  FrameInfo.msg  FrameSize.msg  MotorStatus.msg  ObjectCenter.msg  SingleMotorStatus.msg  VideoRxStatus.msg  YoloStatus.msg
src/sentinel_motor/: CMakeLists.txt  README.md
src/sentinel_motor/config/: params.yaml
src/sentinel_motor/include/sentinel_motor/: PacketDef.hpp
src/sentinel_motor/launch/: pan_tilt_control.launch.py
src/sentinel_motor/src/: pan_tilt_control_node.cpp  tracking_control_node.cpp
src/stub/: moving_stub.py  static_stub.py
zybo/: README.md  zybo_bridge.cpp
(+99 files in other folders)
