<?xml version="1.0"?>
<package format="3">
  <name>gui_interface</name>
  <version>0.0.0</version>
  <description>UDP bridge package between GUI PC and ROS 2 system</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libboost-system-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>sentinel_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>libboost-system-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
